# gov-llm-e2e-testkit

./: .env.internet.sample  .env.sample  .gitignore  .markdownlint.json  CHANGELOG.md  PROJECT_STATUS.md  README.md  env.yaml  gov-llm-e2e-testkit Startup Template v1.1.md  pyproject.toml  pytest.ini  requirements.txt  startup_template_v1.1.md  verify_dom_scope.txt
design/: Design_BasePage_v0.1.md  Design_ChatPage_v0.1.md  Design_playwright_v0.1.md  Locator_Guide_v0.2.md
docs/: ChatGPT_Startup_Workflow_v3.0.md  Debugging_Principles.md  Design_BasePage.md  Design_ChatPage.md  Design_ChatPage_submit_v0.6.md  Design_ChatPage_v0.5.md  Design_LoginPage_v0.1.md  Design_answer_probe_api_v0.1.md  Design_ci_e2e_v0.1.2.md  Design_ci_rag_entry_v0.1.md  Design_env_v0.1.md  Design_env_v0.2.3.md  Design_env_v0.2.md  Design_f4_trial_dataset_v0.1.md  Design_logging_v0.1.md  Design_playwright_v0.1.md  Design_probe_graphql_answer_detection_v0.1.md  Design_probe_graphql_answer_detection_v0.2.md  Design_pytest_f4_results_writer_v0.1.1.md  Design_pytest_f4_results_writer_v0.1.2.md  Design_pytest_v0.2.md  Design_rag_f4_dept_boundary_probe_v0.1.md  Design_rag_f4_eval_v0.1.md  Design_rag_f4_operation_rules_v0.1.5.md  Design_rag_f4_operation_rules_v0.1.md  Design_run_probe_once_v0.1.1.md  Design_submit_probe_correlation_v0.1.md  F4_results_case1_dryrun.md  F4_results_template_v0.1.md  FAQ_Question_Resolution.md  Golden_Question_Pool_A_v1.1.md  PROJECT_GRAND_RULES.md  README_Question_Resolution.md  Roadmap_v1.1.md  Roadmap_v1.2.md  Roadmap_v1.3.md  Test_plan_probe_v0.2.1.md  Test_plan_probe_v0.2.2.md  startup_template_v3.0.md  startup_template_v3.1.md
sandbox/: debug_chat_inspect.py  debug_login_inspect.py  inspect_chat_dom.py  test_api_response_v0_4.py  tmp_chat_after_login.html
scripts/: archive_run.py  bootstrap_env.py  build_dataset_from_f8.py  probe_v0_2.py  question_resolution_wrapper.py  (+10 more)
(+241 files in other folders)
